# state-pattern-lesson

BadCoffeeExpress/: CMakeLists.txt  main.cpp
BadCoffeeExpress/inc/: CoffeeExpress.hpp
BadCoffeeExpress/src/: CoffeeExpress.cpp
GoodCoffeeExpress/: CMakeLists.txt  main.cpp
GoodCoffeeExpress/inc/: CoffeExpressState.hpp  CoffeeExpress.hpp  CoffeeExpressBoilingUpWater.hpp  CoffeeExpressGrindCoffeeBeans.hpp  CoffeeExpressLackOfCoffeeBeans.hpp  CoffeeExpressLackOfWater.hpp  CoffeeExpressMakeCoffee.hpp  CoffeeExpressOff.hpp  CoffeeExpressOn.hpp  CoffeeExpressWait.hpp
GoodCoffeeExpress/src/: CoffeeExpress.cpp  CoffeeExpressBoilingUpWater.cpp  CoffeeExpressGrindCoffeeBeans.cpp  CoffeeExpressLackOfCoffeeBeans.cpp  CoffeeExpressLackOfWater.cpp  CoffeeExpressMakeCoffee.cpp  CoffeeExpressOff.cpp  CoffeeExpressOn.cpp  CoffeeExpressWait.cpp
